# ai-driven-coding-template

./: .gitignore  AGENTS.md  README.md
.github/workflows/: template-verify.yml
ai/: README.md
ai/rules/: task-workflow.md
architectures/: README.md
architectures/hexagonal/: README.md
docs/: choosing.md  contributing.md  decisions.md  optimization-plan.md
docs/adoption/: README.md  for-ai-agents.md  for-developers.md  for-owners.md
documents/: README.md  glossary.md
documents/adr/: TEMPLATE.md
documents/charter/: TEMPLATE.md
documents/github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
documents/handoff/: TEMPLATE.md
documents/log/: TEMPLATE.md
documents/spec/: TEMPLATE.md
documents/standards/: paperwork-standard-reference.md  paperwork-standard.md
documents/taxonomy/: README.md
recipes/: README.md
recipes/go-minimal/: recipe.json
recipes/python-microservice-tdd/: recipe.yaml
recipes/ts-minimal/: recipe.json
scripts/: README.md  new-project  new-project.ps1  new-project.py
templates/: README.md
templates/languages/python/: .env.example  .gitignore  README.md  pyproject.toml
templates/languages/python/src/{{python_package}}/: __init__.py  greeting.py
templates/languages/python/tests/: test_greeting.py
workflows/: README.md
workflows/ci-cd/: README.md
workflows/contracts/: README.md
workflows/raid/: CYCLE_LOG.template.md  README.md  active-task.example.yaml  cycle-runner-prompt.md  raid-coordinator.py
workflows/warp/: EXAMPLE-manifest.yaml  README.md  slice-manifest-validate.py  worktrees.py
(+35 files in other folders)
