[project]
name = "{{project_name}}"
version = "0.1.0"
description = "<one line>"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{python_package}}"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
